--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
 	<body style="width: 100%; height: 100%">
 		<div class="header">
 			<a href="/" class="logo"
-				>NekoWatch<span style="color: purple">;</span></a
+				>MangaNaija<span style="color: green">;</span></a
 			>
 			<div class="header-right">
 				<a style="margin: 0; padding: 6px; display: none" id="top-search">
