--- a/public/index.html
+++ b/public/index.html
@@ -65,13 +65,13 @@
 			<div class="modal-content">
 			  <span class="close">&times;</span>
 			  <div class="modalcontent" style="text-align: center;">
-				<button id="modalbtn"><a href="http://track.koneko.link">Tracker</a></button>
+				<button id="modalbtn"><a href="http://manganaija.com">Home</a></button>
 				<button id="modalbtn"><a href="/genres">Genres</a></button> 
 				<button id="modalbtn"><a href="/list">Anime List</a></button>
 				<button id="modalbtn"><a href="/season">Seasonal Anime</a></button>
-				<span>Created with 💖 by <a href="https://github.com/koneko">koneko</a></span>
-				<span>NekoWatch's code is <a href="https://github.com/koneko/nekowatch">open source</a> and you may use it freely.</span>
-				<span>Current version is <b>2.3.0</b></span>
+				<span>Powered ❤ by <a href="https://manganaija.com/">MangaNaija</a></span>
+				<span>MangaNaija is powered by<a href="https://donate.manganaija.com">donations</a> and you may donate if you like our service.</span>
+				<span>We hope you enjoy our service <b>😊</b></span>
 			</div>
 			</div>
 		  </div>
