--- a/public/index.html
+++ b/public/index.html
@@ -71,7 +71,7 @@
 				<button id="modalbtn"><a href="/season">Seasonal Anime</a></button>
 				<span>Powered ❤ by <a href="https://manganaija.com/">MangaNaija</a></span>
 				<span>MangaNaija is powered by<a href="https://donate.manganaija.com">donations</a> and you may donate if you like our service.</span>
-				<span>We hope you enjoy our service <b>😊</b></span>
+				<span>Account No. <b> 2186769726 UBA </b></span>
 			</div>
 			</div>
 		  </div>
