--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 		<link rel="stylesheet" href="/css/modal.css">
 		<link
 			rel="shortcut icon"
-			href="https://hub.koneko.link/cdn/icons/purple.png"
+			href="https://gogocdn.net/cover/dance-dance-danseur.png"
 			type="image/x-icon"
 		/>
 		<title>MangaNaija</title>
