--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,7 @@
 				<button id="modalbtn"><a href="/genres">Genres</a></button> 
 				<button id="modalbtn"><a href="/list">Anime List</a></button>
 				<button id="modalbtn"><a href="/season">Seasonal Anime</a></button>
-				<span>Powered ❤ by <a href="https://manganaija.com/">MangaNaija</a></span>
+				<span><a href="https://manganaija.com/">❤MangaNaija❤</a></span>
 				<span>MangaNaija is run with<a href="https://donate.manganaija.com">donations</a> and you may donate if you like our service.</span>
 				<span>Account No. <b> 2186769726 UBA </b></span>
 			</div>
