--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
 			>
 			<div class="header-right">
 				<a style="margin: 0; padding: 6px; display: none" id="top-search">
-					<input type="text" placeholder="query..." id="input" />
+					<input type="text" placeholder="search for any anime..." id="input" />
 					<button onclick="querySearch('input', 'searchres')" id="submitbtn">
 						<i class="fa fa-search" style="width: 30px"></i>
 					</button>
