--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
 						<i class="fa fa-search" style="width: 30px"></i>
 					</button>
 				</a>
-				<a href="javascript:void()" id="modalopenbtn">Extra</a>
+				<a href="javascript:void()" id="modalopenbtn">Menu</a>
 				<a href="/login" class="track" id="trackerlogin" style="display: block !important;">Login</a>
 			</div>
 		</div>
